# FastApi-auth

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
api/: index.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  dashboard.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  token.py  user.py
app/static/css/: style.css
app/static/js/: auth.js  dashboard.js
app/templates/: base.html  dashboard.html  docs_guide.html  index.html  login.html  register.html
tests/: __init__.py  conftest.py  test_auth.py  test_users.py
