[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "fastapi-auth-showcase"
version = "1.0.0"
description = "Production-grade FastAPI Authentication & User Management Application"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Akhil Jayaraj" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "aiosqlite>=0.20.0",
    "email-validator>=2.1.0",
    "greenlet>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "ruff>=0.3.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
